[package]
name = "paulson-8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
egui-miniquad = {git = "https://github.com/not-fl3/egui-miniquad"}
miniquad = "0.3.11" 
log = { version = "0.4.17", features = ["std"] }
thiserror = "1.0.32"
rand = "0.8.5"