[package]
name = "paulson-8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.18.0"
egui-macroquad = "0.11.0"
egui-miniquad = "0.11.0"
macroquad = { version = "0.3.16", default-features = false }
log = { version = "0.4.17", features = ["std"] }
rand = "0.8.5"